spellbind tiling and options->moveResizeMaximizedWindows

BUG: 246153